Add PR feedback

--- a/html-and-the-web_div-salad/index.html
+++ b/html-and-the-web_div-salad/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <div>
-      <div>
+    
+      <nav>
         <h1>Jane Doe</h1>
 
         <header id="nav">
@@ -14,7 +14,7 @@
           <li>Contact</li>
           <li>Skillset</li>
         </header>
-      </div>
+      </nav>
 
       <main>
         <section id="about-me">
@@ -57,6 +57,6 @@
           </ul>
         </section>
       </main>
-    </div>
+    </>
   </body>
 </html>
