--- a/html-and-the-web_div-salad/index.html
+++ b/html-and-the-web_div-salad/index.html
@@ -5,58 +5,56 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    
-      <nav>
-        <h1>Jane Doe</h1>
+    <nav>
+      <h1>Jane Doe</h1>
 
-        <header id="nav">
-          <li>About Me</li>
-          <li>Contact</li>
-          <li>Skillset</li>
-        </header>
-      </nav>
+      <header id="nav">
+        <li>About Me</li>
+        <li>Contact</li>
+        <li>Skillset</li>
+      </header>
+    </nav>
 
-      <main>
-        <section id="about-me">
-          <h2>About me</h2>
-          <p>
-            Hi there! Welcome to my personal website. Here is gathered the most
-            important information about me. If you want to work with me or get
-            to know me, please don't hesitate to get in contact.
-          </p>
+    <main>
+      <section id="about-me">
+        <h2>About me</h2>
+        <p>
+          Hi there! Welcome to my personal website. Here is gathered the most
+          important information about me. If you want to work with me or get to
+          know me, please don't hesitate to get in contact.
+        </p>
 
-          <figure>
-            <img
-              src="https://source.unsplash.com/random/400x300?fruit"
-              alt="a random picture"
-            />
-            <figcaption>
-              A random picture, because I would like to maintain my privacy and
-              let my code speak for me, instead of images.
-            </figcaption>
-          </figure>
-        </section>
+        <figure>
+          <img
+            src="https://source.unsplash.com/random/400x300?fruit"
+            alt="a random picture"
+          />
+          <figcaption>
+            A random picture, because I would like to maintain my privacy and
+            let my code speak for me, instead of images.
+          </figcaption>
+        </figure>
+      </section>
 
-        <section id="contact">
-          <h2>Contact</h2>
-          <a href="https://github.com/neuefische">GitHub</a>
-          <a href="https://de.linkedin.com/">LinkedIn</a>
-          <a href="https://codesandbox.io/">CodeSandbox</a>
-        </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <a href="https://github.com/neuefische">GitHub</a>
+        <a href="https://de.linkedin.com/">LinkedIn</a>
+        <a href="https://codesandbox.io/">CodeSandbox</a>
+      </section>
 
-        <section id="skills">
-          <h2>Skillset</h2>
+      <section id="skills">
+        <h2>Skillset</h2>
 
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Painting rainbows</li>
-            <li>Party</li>
-          </ul>
-        </section>
-      </main>
-    </>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>Painting rainbows</li>
+          <li>Party</li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
