--- a/html-and-the-web_personal-website/index.html
+++ b/html-and-the-web_personal-website/index.html
@@ -10,22 +10,31 @@
 
   <body>
     <nav>
-      <li>About</li>
-      <li>Blog</li>
-      <li>Contact</li>
+      <ul>
+        About
+      </ul>
+      <ul>
+        Blog
+      </ul>
+      <ul>
+        Contact
+      </ul>
     </nav>
+
     <main>
       <section><img src="./Chapada.JPG" alt="Me" /></section>
 
-      <h2>Welcome!</h2>
-      <p>
-        You have come to the right place if you are looking for content on all
-        sorts of things: from language learning to personal finance and
-        specially about daring a career in tech. Life is too short to like just
-        one thing!
-      </p>
+      <section class="hello">
+        <h2>Welcome!</h2>
+        <p>
+          You have come to the right place if you are looking for content on all
+          sorts of things: from language learning to personal finance and
+          specially about daring a career in tech. Life is too short to like
+          just one thing!
+        </p>
+      </section>
 
-      <section>
+      <section class="socials">
         <h2>Social Links</h2>
         <a href="https://www.linkedin.com/feed/" target="_blank">My linkedin</a>
         <a href="https://github.com/andrestack" target="_blank">My github</a>
