Add changes from Friday

--- a/html-and-the-web_personal-website/index.html
+++ b/html-and-the-web_personal-website/index.html
@@ -22,25 +22,31 @@
     </nav>
 
     <main>
-      <section><img src="./Chapada.JPG" alt="Me" /></section>
+      <article class="container">
+        <section><img src="./Chapada.JPG" alt="Me" /></section>
 
-      <section class="hello">
-        <h2>Welcome!</h2>
-        <p>
-          You have come to the right place if you are looking for content on all
-          sorts of things: from language learning to personal finance and
-          specially about daring a career in tech. Life is too short to like
-          just one thing!
-        </p>
-      </section>
+        <section class="hello">
+          <h2>Welcome!</h2>
+          <p>
+            You have come to the right place if you are looking for content on
+            all sorts of things: from language learning to personal finance and
+            specially about daring a career in tech. Life is too short to like
+            just one thing!
+          </p>
+        </section>
 
-      <section class="socials">
-        <h2>Social Links</h2>
-        <a href="https://www.linkedin.com/feed/" target="_blank">My linkedin</a>
-        <a href="https://github.com/andrestack" target="_blank">My github</a>
-        <a href=""></a>
-      </section>
-
+        <section class="socials">
+          <h2>Social Links</h2>
+          <p>
+            <a href="https://www.linkedin.com/feed/" target="_blank"
+              >My linkedin</a
+            >
+            <a href="https://github.com/andrestack" target="_blank"
+              >My github</a
+            >
+          </p>
+        </section>
+      </article>
       <footer>
         <p>Created by André Silva ©2023</p>
       </footer>
