--- a/css-responsive_playground/index.html
+++ b/css-responsive_playground/index.html
@@ -51,10 +51,12 @@
             above 599px and above 1199px. Take a look at the img folder -
             there's some material in there.
           </p>
-          <div class="box box--five">
-            <!-- Perhaps you may want to use the <picture> Element here? -->
-            <img src="./img/cat_small.jpg" alt="A cat" />
-          </div>
+          <picture class="box box--five">
+            <source media="(min-width: 600px)" srcset="./img/cat_small.jpg"/>
+            <source media="(min-width: 1199px)" srcset="./img/cat_large.jpg"/>
+            <img src="./img/cat_medium.jpg" alt="A cat" />
+          </picture>  
+            
         </section>
       </section>
     </main>
