--- a/html-forms_Finding-a11y-errors/index.html
+++ b/html-forms_Finding-a11y-errors/index.html
@@ -12,12 +12,12 @@
   <body>
     <section>
       <fieldset>
-      <h1 class="title">Understanding A11y in Forms</h1>
+      <h1 id="title">Understanding A11y in Forms</h1>
       <p id="description">
         Please let us know how we can support you with a11y issues.
       </p>
 
-      <form for="title">
+      <form aria-labelledby="title">
         <fieldset>
           <legend>Enter your information</legend>
           <label aria-describedby="name-input">Name:</label>
