--- a/css-animations_toast-animations/index.html
+++ b/css-animations_toast-animations/index.html
@@ -16,7 +16,7 @@
     </button>
     <button type="button" class="toast toast--hidden" data-js="toast">
       Success! You started the toast.
-      <div class="countdown" data-js="countdown"></div>
+      <div class="countdown countdown--visible" data-js="countdown"></div>
     </button>
   </body>
 </html>
