--- a/js-structure_spacerocket/index.html
+++ b/js-structure_spacerocket/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>HTML & CSS & JS</title>
+    <title>HTML and CSS and JS</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="./js/index.js" type="module" defer></script>
   </head>
